# midi_reader

./: Cargo.toml
src/: lib.rs  main.rs  sound_playing.rs
src/sound_playing/: custom_sounds.rs  mod.rs
src/sound_playing/custom_sounds/: mod.rs  saw_wave.rs  square_wave.rs
